# Footage

./: .gitlab-ci.yml  Cargo.toml  PRESS.md  README.md  footage.doap  meson.build  update_translation.sh
data/: io.gitlab.adhami3310.Footage.desktop.in.in  io.gitlab.adhami3310.Footage.gschema.xml.in  io.gitlab.adhami3310.Footage.metainfo.xml.in.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style-dark.css  style-hc.css  style.css
data/resources/blueprints/: crop.blp  help-overlay.blp  timeline.blp  video-preview.blp  window.blp
flatpak/: io.gitlab.adhami3310.Footage.json  x265_config.h
flatpak/codecs/: gstreamer.json
po/: LINGUAS  POTFILES.in  br.po  cs.po  de.po  es.po  footage.pot  fr.po  hu.po  it.po  nl.po  oc.po  pt_BR.po  ru.po  tr.po
src/: application.rs  info.rs  main.rs  orientation.rs  profiles.rs  render.rs  window.rs
src/widgets/: crop.rs  mod.rs  preview.rs  timeline.rs
