[package]
name = "footage"
version = "1.3.3"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.22"
gtk = { version = "0.11", package = "gtk4", features = ["gnome_50"] }
gtk-macros = { version = "0.11", package = "gtk4-macros" }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
log = "0.4"
once_cell = "1.21"
tracing-subscriber = "0.3"
itertools = "0.14"
ashpd = { version = "0.13", features = ["open_uri"] }
async-std = "1.13"
gst = { version = "0.25", package = "gstreamer", features = ["v1_26"] }
ges = { version = "0.25", package = "gstreamer-editing-services", features = ["v1_26"] }
url = "2.5"
gstreamer-video = { version = "0.25", features = ["v1_26"] }
ordered-float = "5"
gstreamer-pbutils = { version = "0.25", features = ["v1_26"] }
fraction = "0.15"
derivative = "2.2"
async-channel = "2.5"
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread"] }
thiserror = "2"
